# mmaud-gui

./: .gitignore  CMakeLists.txt  InstallerFile.ifp  LICENCE  Licence.txt  QtMmaud.qrc  README.md  README_FR.md  SettingsWidget.cpp  SettingsWidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moditem.cpp  moditem.h  moditem.ui  secrets.h  vcpkg.json
